--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <!-- Font Link -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;800&family=Playfair+Display:wght@400;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
@@ -47,6 +47,7 @@
     <section class="banner">
         <div class="container">
             <div class="banner__content">
+                <h2 class="banner__subtitle">Surya's Portfolio</h2>
                 <h1 class="banner__title">Coming Soon</h1>
                 <p class="banner__text">In the meantime, Stay tuned. The site is almost almost ready to launch.</p>
                 
